# BLOC

./: .gitignore  CMakeLists.txt  Makefile  README.md  sonar-project.properties
apps/: CMakeLists.txt  breaker.h  cli_msgdb.cpp  cli_msgdb.h  cli_parser.cpp  cli_parser.h  copyright.h  copyright.txt  help.h  help.txt  help_boolean.h  help_boolean.txt  help_bytes.h  help_bytes.txt  help_complex.h  help_complex.txt  help_decimal.h  help_decimal.txt  help_expression.h  help_expression.txt  help_integer.h  help_integer.txt  help_object.h  help_object.txt  help_string.h  help_string.txt  help_table.h  help_table.txt  help_tuple.h  help_tuple.txt  help_type.h  help_type.txt  help_variable.h  help_variable.txt  license.h  license.txt  main.cpp  main_options.cpp  main_options.h  read_file.cpp  (+7 more)
blocc/: CMakeLists.txt  bloc_capi.cpp  bloc_capi.h  collection.cpp  collection.h  complex.cpp  complex.h  context.cpp  context.h  debug.cpp  debug.h  declspec.h  exception.h  exception_parse.cpp  exception_parse.h  exception_runtime.cpp  exception_runtime.h  executable.cpp  executable.h  expression.h  expression_boolean.cpp  expression_boolean.h  expression_builtin.cpp  expression_builtin.h  expression_collection.cpp  expression_collection.h  expression_complex.cpp  expression_complex.h  expression_complex_ctor.cpp  expression_complex_ctor.h  expression_functor.cpp  expression_functor.h  expression_integer.cpp  expression_integer.h  expression_item.cpp  expression_item.h  expression_iterator.cpp  expression_iterator.h  expression_literal.cpp  expression_literal.h  (+93 more)
blocc/builtin/: base64.cpp  base64.h  builtin_abs.cpp  builtin_abs.h  builtin_acos.cpp  builtin_acos.h  builtin_asin.cpp  builtin_asin.h  builtin_atan.cpp  builtin_atan.h  builtin_atan2.cpp  builtin_atan2.h  builtin_b64dec.cpp  builtin_b64dec.h  builtin_b64enc.cpp  builtin_b64enc.h  builtin_bool.cpp  builtin_bool.h  builtin_ceil.cpp  builtin_ceil.h  builtin_chr.cpp  builtin_chr.h  builtin_clamp.cpp  builtin_clamp.h  builtin_cos.cpp  builtin_cos.h  builtin_cosh.cpp  builtin_cosh.h  builtin_ee.cpp  builtin_ee.h  builtin_error.cpp  builtin_error.h  builtin_exp.cpp  builtin_exp.h  builtin_false.cpp  builtin_false.h  builtin_floor.cpp  builtin_floor.h  builtin_getenv.cpp  builtin_getenv.h  (+102 more)
blocc/cmake/: blocc.pc.in  bloccConfig.cmake.in  bloccConfigVersion.cmake.in
blocc/member/: member_at.cpp  member_at.h  member_complex.cpp  member_complex.h  member_concat.cpp  member_concat.h  member_count.cpp  member_count.h  member_delete.cpp  member_delete.h  member_insert.cpp  member_insert.h  member_put.cpp  member_put.h  member_set.cpp  member_set.h
blocc/operator/: op_add.cpp  op_add.h  op_and.cpp  op_and.h  op_band.cpp  op_band.h  op_bior.cpp  op_bior.h  op_bnot.cpp  op_bnot.h  op_bxor.cpp  op_bxor.h  op_div.cpp  op_div.h  op_eq.cpp  op_eq.h  op_exp.cpp  op_exp.h  op_ge.cpp  op_ge.h  op_gt.cpp  op_gt.h  op_ior.cpp  op_ior.h  op_le.cpp  op_le.h  op_lt.cpp  op_lt.h  op_match.cpp  op_match.h  op_mod.cpp  op_mod.h  op_mul.cpp  op_mul.h  op_ne.cpp  op_ne.h  op_neg.cpp  op_neg.h  op_not.cpp  op_not.h  (+10 more)
modules/: CMakeLists.txt  README.md
modules/complex/: CMakeLists.txt  plugin_complex.cpp  plugin_complex.h
modules/crypto/: CMakeLists.txt  README.md  aes.cpp  aes.h  md5.cpp  md5.h  plugin_crypto.cpp  plugin_crypto.h
modules/csv/: CMakeLists.txt  README.md  csvparser.cpp  csvparser.h  plugin_csv.cpp  plugin_csv.h
modules/date/: CMakeLists.txt  README.md  builtin.c  builtin.h  import_date.cpp  import_date.h  langinfo.h  nl_langinfo.c  plugin_date.cpp  plugin_date.h
modules/file/: CMakeLists.txt  README.md  import_file.cpp  import_file.h  plugin_file.cpp  plugin_file.h
modules/mariadb/: CMakeLists.txt  README.md  plugin_mariadb.cpp  plugin_mariadb.h
modules/mariadb/cmake/: FindMariaDB.cmake
modules/mysql/: CMakeLists.txt  README.md  plugin_mysql.cpp  plugin_mysql.h
modules/mysql/cmake/: FindMySQL.cmake
modules/oracle/: CMakeLists.txt  README.md  plugin_oracle.cpp  plugin_oracle.h
modules/oracle/oracle/: CMakeLists.txt
modules/plplot/: CMakeLists.txt  FindPLplot.cmake  README.md  parseoptions.h  plugin_plplot.cpp  plugin_plplot.h
modules/plplot/cmake/: FindPLplot.cmake
modules/regex/: CMakeLists.txt  README.md  plugin_regex.cpp  plugin_regex.h
modules/sqlite3/: CMakeLists.txt  README.md  plugin_sqlite3.cpp  plugin_sqlite3.h
modules/sqlite3/cmake/: FindSQLite3.cmake
modules/sys/: CMakeLists.txt  README.md  plugin_sys.cpp  plugin_sys.h  spawn_process.c  spawn_process.h
modules/utf8/: CMakeLists.txt  README.md  import_utf8.cpp  import_utf8.h  plugin_utf8.cpp  plugin_utf8.h  utf8helper.cpp  utf8helper.h  utf8helper_charmap.cpp  utf8helper_charmap.h
msgdb/: CMakeLists.txt  HOWTO  generate.b  msgdb.c  msgdb.h  msgdb_common.h  msgdb_lang.h  msgdb_lang_en.h
msgdb/lang_en/: msg_CLI.txt  msg_boolean.txt  msg_bytes.txt  msg_complex.txt  msg_decimal.txt  msg_expression.txt  msg_integer.txt  msg_object.txt  msg_operator.txt  msg_string.txt  msg_table.txt  msg_tuple.txt  msg_type.txt  msg_variable.txt
msgdb/lang_en/builtin/: msg_abs.txt  msg_acos.txt  msg_asin.txt  msg_atan.txt  msg_atan2.txt  msg_b64dec.txt  msg_b64enc.txt  msg_bool.txt  msg_ceil.txt  msg_chr.txt  msg_clamp.txt  msg_cos.txt  msg_cosh.txt  msg_ee.txt  msg_error.txt  msg_exp.txt  msg_false.txt  msg_floor.txt  msg_getenv.txt  msg_getsys.txt  msg_hash.txt  msg_hex.txt  msg_iconj.txt  msg_ii.txt  msg_imag.txt  msg_input.txt  msg_int.txt  msg_iphase.txt  msg_isnull.txt  msg_isnum.txt  msg_log.txt  msg_log10.txt  msg_lower.txt  msg_lsubstr.txt  msg_ltrim.txt  msg_max.txt  msg_min.txt  msg_mod.txt  msg_null.txt  msg_num.txt  (+31 more)
msgdb/lang_en/statement/: msg_begin.txt  msg_break.txt  msg_continue.txt  msg_desc.txt  msg_do.txt  msg_else.txt  msg_elsif.txt  msg_end.txt  msg_end_if.txt  msg_end_loop.txt  msg_except.txt  msg_exception.txt  msg_for.txt  msg_forall.txt  msg_function.txt  msg_if.txt  msg_import.txt  msg_include.txt  msg_is.txt  msg_let.txt  msg_loop.txt  msg_nop.txt  msg_print.txt  msg_put.txt  msg_raise.txt  msg_return.txt  msg_then.txt  msg_trace.txt  (+2 more)
(+48 files in other folders)
